--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nestjs-temporalio",
+  "name": "nestjs-temporal",
   "version": "0.8.0",
-  "description": "temporalio for nestjs framework",
+  "description": "temporal for nestjs framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
