--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-temporal",
-  "version": "0.8.0",
+  "version": "0.0.1",
   "description": "temporal for nestjs framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -53,5 +53,10 @@
     "tsconfig-paths": "^3.12.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.5"
+  },
+  "peerDependencies": {
+    "temporalio": "^0.18.0",
+    "@nestjs/common": "^6.10.11 || ^7.0.0 || ^8.0.0",
+    "@nestjs/core": "^6.10.11 || ^7.0.0 || ^8.0.0"
   }
 }
