--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-temporal",
-  "version": "0.0.1-beta",
+  "version": "0.0.1-beta.1",
   "description": "temporal for nestjs framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
