--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.4",
     "sort-package-json": "^1.54.0",
-    "temporalio": "^0.18.0",
+    "temporalio":  "~1.0.0-0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
@@ -60,7 +60,7 @@
   "peerDependencies": {
     "@nestjs/common": "^6.10.11 || ^7.0.0 || ^8.0.0",
     "@nestjs/core": "^6.10.11 || ^7.0.0 || ^8.0.0",
-    "temporalio": "^0.18.0"
+    "temporalio": "~1.0.0-0"
   },
   "dependencies": {
     "release-it": "^14.12.5"
