--- a/package.json
+++ b/package.json
@@ -50,20 +50,25 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.4",
     "sort-package-json": "^1.54.0",
-    "temporalio": "~1.0.0-0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "@temporalio/client": "~1.0.0-0",
+    "@temporalio/common": "~1.0.0-0",
+    "@temporalio/worker": "~1.0.0-0",
+    "@temporalio/workflow": "~1.0.0-0"
   },
   "peerDependencies": {
     "@nestjs/common": "^6.10.11 || ^7.0.0 || ^8.0.0",
     "@nestjs/core": "^6.10.11 || ^7.0.0 || ^8.0.0",
-    "temporalio": "~1.0.0-0"
+    "@temporalio/client": "~1.0.0-0",
+    "@temporalio/common": "~1.0.0-0",
+    "@temporalio/worker": "~1.0.0-0",
+    "@temporalio/workflow": "~1.0.0-0"
   },
   "dependencies": {
-    "@temporalio/worker": "^1.0.0",
     "release-it": "^14.12.5"
   }
 }
