--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "nestjs-temporal",
-  "version": "0.0.5",
+  "version": "1.0.0",
   "description": "temporal for nestjs framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
+    "postinstall": "npm run build",
     "format": "prettier --write **/*.{ts,json}",
     "lint": "eslint \"lib/**/*.ts\" --fix",
     "prepublish:next": "npm run build",
@@ -31,10 +32,10 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^16.2.1",
-    "@nestjs/common": "^8.3.1",
-    "@nestjs/core": "^8.3.1",
-    "@nestjs/platform-express": "^8.3.1",
-    "@nestjs/testing": "^8.3.1",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.18",
     "@types/reflect-metadata": "^0.1.0",
@@ -62,8 +63,8 @@
     "typescript": "^4.5.5"
   },
   "peerDependencies": {
-    "@nestjs/common": "^6.10.11 || ^7.0.0 || ^8.0.0",
-    "@nestjs/core": "^6.10.11 || ^7.0.0 || ^8.0.0",
+    "@nestjs/common": ">=6.10.11",
+    "@nestjs/core": ">=6.10.11",
     "@temporalio/activity": "^1.4.0",
     "@temporalio/client": "^1.4.0",
     "@temporalio/common": "^1.4.0",
