--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nestjs-temporal",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "temporal for nestjs framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -28,46 +28,48 @@
       "sort-package-json"
     ]
   },
+  "engines" : {
+    "node" : ">=12.0.0"
+  },
   "devDependencies": {
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.18",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@nestjs/common": "^10.1.3",
+    "@nestjs/core": "^10.1.3",
+    "@nestjs/platform-express": "^10.1.3",
+    "@nestjs/testing": "^10.1.3",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.5.1",
     "@types/reflect-metadata": "^0.1.0",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.4.0",
-    "eslint-plugin-import": "^2.25.4",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "prettier": "^2.5.1",
+    "@typescript-eslint/eslint-plugin": "^6.4.0",
+    "@typescript-eslint/parser": "^6.4.0",
+    "eslint": "^8.47.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "husky": "^8.0.3",
+    "jest": "^29.6.2",
+    "prettier": "^3.0.2",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.4",
-    "sort-package-json": "^1.54.0",
-    "@temporalio/activity": "^1.4.0",
-    "@temporalio/client": "^1.4.0",
-    "@temporalio/common": "^1.4.0",
-    "@temporalio/worker": "^1.4.0",
-    "@temporalio/workflow": "^1.4.0",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "tsconfig-paths": "^3.12.0",
+    "rimraf": "^5.0.1",
+    "rxjs": "^7.8.1",
+    "@temporalio/activity": "^1.8.3",
+    "@temporalio/client": "^1.8.3",
+    "@temporalio/common": "^1.8.3",
+    "@temporalio/worker": "^1.8.3",
+    "@temporalio/workflow": "^1.8.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^5.1.6"
   },
   "peerDependencies": {
-    "@nestjs/common": ">=6.10.11",
-    "@nestjs/core": ">=6.10.11",
-    "@temporalio/activity": "^1.4.0",
-    "@temporalio/client": "^1.4.0",
-    "@temporalio/common": "^1.4.0",
-    "@temporalio/worker": "^1.4.0",
-    "@temporalio/workflow": "^1.4.0"
+    "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@nestjs/core": "^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@temporalio/activity": "^1.8.3",
+    "@temporalio/client": "^1.8.3",
+    "@temporalio/common": "^1.8.3",
+    "@temporalio/worker": "^1.8.3",
+    "@temporalio/workflow": "^1.8.3"
   }
 }
