--- a/package.json
+++ b/package.json
@@ -1,31 +1,25 @@
 {
   "name": "nestjs-temporal",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "temporal for nestjs framework",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "rimraf -rf dist && tsc -p tsconfig.json",
-    "postinstall": "npm run build",
     "format": "prettier --write **/*.{ts,json}",
     "lint": "eslint lib --fix",
     "prepublish:next": "npm run build",
     "publish:next": "npm publish --access public --tag next",
     "prepublish:npm": "npm run build",
     "publish:npm": "npm publish --access public",
-    "prerelease": "npm run build",
-    "sample-app": "ts-node --require tsconfig-paths/register --project sample/tsconfig.json sample/main.ts",
     "test": "jest --detectOpenHandles --coverage",
     "test:e2e": "jest --config=jest-e2e.config.js --detectOpenHandles --coverage --runInBand"
   },
   "author": "zegue <zegueleonel@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "lint-staged": {
     "*.{ts}": [
       "prettier --write"
-    ],
-    "package.json": [
-      "sort-package-json"
     ]
   },
   "engines" : {
@@ -40,7 +34,6 @@
     "@nestjs/testing": "^10.1.3",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.1",
-    "@types/reflect-metadata": "^0.1.0",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "@typescript-eslint/parser": "^6.4.0",
     "eslint": "^8.47.0",
@@ -60,7 +53,6 @@
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "tslint": "^6.1.3",
     "typescript": "^5.1.6"
   },
   "peerDependencies": {
