refactor: update Temporal client integration to use new Client API
- Changed import from WorkflowClient to Client in temporal.providers.ts
- Updated buildClient function to return Client instead of WorkflowClient
- Refactored client utility functions to accommodate new Client API
- Adjusted provider utility functions to use updated client utility
- Updated package name to @liholiho/nestjs-temporal

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-temporal",
+  "name": "@liholiho/nestjs-temporal",
   "version": "2.0.1",
   "description": "temporal for nestjs framework",
   "main": "dist/index.js",
